--- a/sms-forwarder-privacy/index.html
+++ b/sms-forwarder-privacy/index.html
@@ -10,8 +10,9 @@
   </style>
 </head>
 <body>
-  <h1>Init.io Privacy Policies</h1>
-  <p>Select your app to view its privacy policy:</p>
+  <h1>SMS Forwarder Privacy Policies</h1>
   <a href="sms-forwarder-privacy/privacy.html">SMS Forwarder</a>
+  <h1>SMS Forwarder Account Deletion</h1>
+  <a href="sms-forwarder-privacy/account-deletion.md">SMS Forwarder</a>
 </body>
 </html>
