--- a/sms-forwarder-privacy/index.html
+++ b/sms-forwarder-privacy/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <h1>SMS Forwarder Privacy Policies</h1>
-  <a href="sms-forwarder-privacy/privacy-policy">Privacy & Policy</a>
+  <a href="privacy-policy">Privacy & Policy</a>
   <h1>SMS Forwarder Account Deletion</h1>
-  <a href="sms-forwarder-privacy/account-deletion">Account Deletion</a>
+  <a href="account-deletion">Account Deletion</a>
 </body>
 </html>
